--- a/Angular8/package.json
+++ b/Angular8/package.json
@@ -169,6 +169,7 @@
     "domelementtype": "^2.2.0",
     "domhandler": "^4.3.0",
     "domutils": "^2.8.0",
+    "dotenv": "^14.3.0",
     "ecc-jsbn": "^0.1.2",
     "ee-first": "^1.1.1",
     "electron-to-chromium": "^1.4.49",
