--- a/ngrx-basic/package.json
+++ b/ngrx-basic/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
     "@faker-js/faker": "^6.0.0-alpha.5",
+    "@ngrx/entity": "^13.0.2",
     "@ngrx/store": "^13.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
