--- a/financys/package.json
+++ b/financys/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.0",
+    "@angular/animations": "^13.2.2",
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
@@ -26,10 +26,10 @@
     "currency-formatter": "^1.5.9",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
+    "ngx-toastr": "^14.2.1",
     "primeicons": "^5.0.0",
     "primeng": "^13.1.1",
     "rxjs": "~7.5.0",
-    "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
