--- a/financys/package.json
+++ b/financys/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@types/currency-formatter": "^1.5.1",
     "angular-imask": "^6.4.2",
     "angular-in-memory-web-api": "^0.13.0",
     "bootstrap": "^5.1.3",
