--- a/package.json
+++ b/package.json
@@ -3,21 +3,39 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve  --proxy-config ./proxy.json",
+    "server": "ts-node -P ./server/server.tsconfig.json ./server/server.ts",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "build:prod": "ng build --prod",
+    "start:prod": "http-server ./dist -a localhost -p 4200",
+    "build-and-start:prod": "run-s build:prod start:prod",
+    "e2e": "start-server-and-test build-and-start:prod http://localhost:4200 cypress:run"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.0.0",
+    "@angular/cdk": "^16.0.1",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
+    "@angular/material": "^16.0.1",
+    "@angular/material-moment-adapter": "^16.0.1",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "body-parser": "^1.20.2",
+    "core-js": "^3.30.2",
+    "cors": "^2.8.5",
+    "cypress": "^12.12.0",
+    "express": "^4.18.2",
+    "http-server": "^14.1.1",
+    "moment": "^2.29.4",
+    "npm-run-all": "^4.1.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -26,13 +44,22 @@
     "@angular-devkit/build-angular": "^16.0.2",
     "@angular/cli": "~16.0.2",
     "@angular/compiler-cli": "^16.0.0",
+    "@angular/language-service": "^16.0.2",
+    "@cypress/webpack-preprocessor": "^5.17.1",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "~4.3.0",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^20.2.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
+    "karma-cli": "^2.0.0",
     "karma-coverage": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "start-server-and-test": "^2.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "~5.0.2"
   }
 }
